Modified securityConfig